dark mode fixes

--- a/public_files/static_css/blackmode.css
+++ b/public_files/static_css/blackmode.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #302AE6;
-    --secondary-color: #536390;
+    --secondary-color: #f1fbfc;
     --font-color: #222222;
     --dark-font: #ffffff;
     --bg-color: #161625;
